<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always"
        android:orderInCategory="999"
        android:title="Reload"/>

    <item
        android:id="@+id/menu_additems"
        android:icon="@drawable/ic_action_additem"
        app:showAsAction="always"
        android:title="@string/menu_addItems"/>

    <item
        android:id="@+id/menu_requestbill"
        android:icon="@drawable/ic_action_requestbill"
        app:showAsAction="always"
        android:title="@string/requestBill"/>

    <item
        android:id="@+id/menu_forceCloseSession"
        android:icon="@drawable/ic_action_closesession"
        app:showAsAction="never"
        android:title="@string/menu_forceCloseSession"/>
    <item
        android:id="@+id/menu_addPayment"
        android:icon="@drawable/ic_action_add_payment"
        app:showAsAction="never"
        android:title="@string/menu_addPayment"/>
    <item
        android:id="@+id/menu_addDiscount"
        android:icon="@drawable/ic_action_add_discount"
        app:showAsAction="never"
        android:title="@string/menu_addDiscount"/>

</menu>