<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <CheckBox
        android:id="@+id/orphans_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/orphaned_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="99"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/search_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:padding="8dp"
            android:text="@string/search_in_descriptions" />
        <CheckBox
            android:id="@+id/search_sku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:padding="8dp"
            android:text="@string/search_in_sku" />

        <CheckBox
            android:id="@+id/not_available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:padding="8dp"
            android:text="@string/show_not_available_items" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/lightgray"
        android:layout_weight="1" />

    <TextView
        android:id="@android:id/empty"
        style="@style/EmptyText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/menuedit_empty"
        android:visibility="gone" />

</LinearLayout>