<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_applyToFloor"
        app:showAsAction="always"
        android:icon="@drawable/apply_to_floor"
        android:title="@string/menu_applyToFloor"/>
    <item
        android:id="@+id/menu_delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"/>
    <item
        android:id="@+id/menu_edit"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit"/>
    <item
        android:id="@+id/menu_new"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_add"
        android:title="Create"/>

</menu>